[tool.poetry]
name = "learn"
version = "0.1.0"
description = ""
authors = ["Mukesh Kumar Chaudhary <mukezhz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
